--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -29,7 +29,7 @@
         <!-- Links -->
         <ul class="navbar-nav mr-auto bd-highlight">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle font-weight-bold mx-1" href="#" id="navbardrop"
+                <a class="nav-link dropdown-toggle font-weight-bold mx-1 text-end" href="#" id="navbardrop"
                    data-toggle="dropdown">
                     Чемпионат
                 </a>
@@ -48,13 +48,13 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link font-weight-bold mx-1" href="{% url 'core:tournaments' %}">Турниры</a>
+                <a class="nav-link font-weight-bold mx-1 text-end" href="{% url 'core:tournaments' %}">Турниры</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link font-weight-bold mx-1" href="{% url 'core:fastcups' %}">Фасткапы</a>
+                <a class="nav-link font-weight-bold mx-1 text-end" href="{% url 'core:fastcups' %}">Фасткапы</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link font-weight-bold mx-1" href="{% url 'core:lives' %}">Трансляции</a>
+                <a class="nav-link font-weight-bold mx-1 text-end" href="{% url 'core:lives' %}">Трансляции</a>
             </li>
             <li class="nav-item font-weight-bold dropdown mx-1">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
