--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -29,7 +29,7 @@
         <!-- Links -->
         <ul class="navbar-nav mr-auto bd-highlight">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle font-weight-bold mx-1 text-end" href="#" id="navbardrop"
+                <a class="nav-link dropdown-toggle font-weight-bold mx-1 text-right" href="#" id="navbardrop"
                    data-toggle="dropdown">
                     Чемпионат
                 </a>
@@ -48,15 +48,15 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link font-weight-bold mx-1 text-end" href="{% url 'core:tournaments' %}">Турниры</a>
+                <a class="nav-link font-weight-bold mx-1 text-right" href="{% url 'core:tournaments' %}">Турниры</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link font-weight-bold mx-1 text-end" href="{% url 'core:fastcups' %}">Фасткапы</a>
+                <a class="nav-link font-weight-bold mx-1 text-right" href="{% url 'core:fastcups' %}">Фасткапы</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link font-weight-bold mx-1 text-end" href="{% url 'core:lives' %}">Трансляции</a>
+                <a class="nav-link font-weight-bold mx-1 text-right" href="{% url 'core:lives' %}">Трансляции</a>
             </li>
-            <li class="nav-item font-weight-bold dropdown mx-1">
+            <li class="nav-item font-weight-bold dropdown mx-1 text-right">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
                     Архив
                 </a>
@@ -85,19 +85,19 @@
 
 
             <li class="nav-item">
-                <a class="nav-link font-weight-bold text-warning mx-1" href="{% url 'tournament:hall_of_fame' %}">Зал славы</a>
+                <a class="nav-link font-weight-bold text-warning mx-1 text-right" href="{% url 'tournament:hall_of_fame' %}">Зал славы</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link font-weight-bold mx-1" href="{% url 'core:forum' %}">Форум</a>
+                <a class="nav-link font-weight-bold mx-1 text-right" href="{% url 'core:forum' %}">Форум</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link font-weight-bold mx-1" href="{% url 'core:admins' %}">Администрация</a>
+                <a class="nav-link font-weight-bold mx-1 text-right" href="{% url 'core:admins' %}">Администрация</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link font-weight-bold mx-1" href="http://www.cis-haxball.com/post/16/rules">Правила</a>
+                <a class="nav-link font-weight-bold mx-1 text-right" href="http://www.cis-haxball.com/post/16/rules">Правила</a>
             </li>
 
 
