--- a/haxball_site/templates/tournament/premier_league/team_table.html
+++ b/haxball_site/templates/tournament/premier_league/team_table.html
@@ -241,7 +241,7 @@
 
                                     <div class="col-5 text-right">
                                         <h5><a class="text-dark" href="{{ match.team_home.get_absolute_url }}"
-                                               class="h5">{{ match.team_home.title }}<img
+                                               >{{ match.team_home.title }}<img
                                                 src="{{ match.team_home.logo.url }}" alt="{{ match.team_home.title }}"
                                                 width="25" height="25"
                                                 class="ml-1"></a></h5>
