--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -1,5 +1,10 @@
 {% load static %}
 {% load tournament_extras %}
+<style>
+    .table td, .table th {
+        padding: 0.3rem;
+    }
+</style>
 <table class="table table-striped">
     <thead>
     <tr>
