--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -1,14 +1,14 @@
 {% load static %}
 {% load tournament_extras %}
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Teko&family=Zen+Dots&display=swap');
 </style>
 <style>
     .table td, .table th {
         padding: 0.5rem;
     }
     .table .number {
-        font-family: 'Zen Dots', cursive;
+        font-family: 'Teko', sans-serif;
     }
 </style>
 <table class="table table-striped">
