--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -9,6 +9,7 @@
     }
     .table .number {
         font-family: 'Teko', sans-serif;
+        font-size: 1.5rem;
     }
 </style>
 <table class="table table-striped">
