edit players stat

--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -1,14 +1,14 @@
 {% load static %}
 {% load tournament_extras %}
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Teko&family=Zen+Dots&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
 </style>
 <style>
     .table td, .table th {
         padding: 0.5rem;
     }
     .table .number {
-        font-family: 'Teko', sans-serif;
+        font-family: 'Quicksand', sans-serif;
         font-size: 1.5rem;
     }
 </style>
