edit players stat

--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -9,7 +9,7 @@
     }
     .table .number {
         font-family: 'Quicksand', sans-serif;
-        font-size: 1.5rem;
+        font-size: 13pt;
     }
 </style>
 <table class="table table-striped">
