--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -16,6 +16,16 @@
     .table .text {
         font-family: 'Kurale', serif;
     }
+
+    thead img {
+        width: 24px;
+        height: 24px;
+    }
+
+    td img {
+        width: 26px;
+        height: 26px;
+    }
 </style>
 <table class="table table-striped">
     <thead>
@@ -24,16 +34,16 @@
         <th scope="col" class="h5">Команда</th>
         <th scope="col" class="h5">Турнир</th>
         <th scope="col" class="text-center"><img
-                src="{% static "img/ico/matches_icon.png" %}" height="20" width="20"
+                src="{% static "img/ico/matches_icon.png" %}"
                 title="Вышел на поле"></th>
         <th scope="col" class="text-center"><img
-                src="{% static "img/ico/ball_2.png" %}" height="20" width="20"
+                src="{% static "img/ico/ball_2.png" %}"
                 title="Забито"></th>
         <th scope="col" class="text-center"><img
-                src="{% static "img/ico/assists_icon.png" %}" height="20" width="20"
+                src="{% static "img/ico/assists_icon.png" %}"
                 title="Голевые передачи"></th>
         <th scope="col" class="text-center"><img
-                src="{% static "img/ico/clean_sheet1.png" %}" height="20" width="20"
+                src="{% static "img/ico/clean_sheet1.png" %}"
                 title="Сухие таймы"></th>
         <th scope="col">
             <div class="h-75 text-center">
@@ -48,13 +58,13 @@
                    style="font-size: 21px"></i>
             </div>
         </th>
-        <th scope="col"><img src="{% static "img/ico/ball_2_og.png" %}" height="20" width="20"
+        <th scope="col"><img src="{% static "img/ico/ball_2_og.png" %}"
                              title="Автоголы"></th>
         <th scope="col" class="text-center"><img
-                src="{% static "img/ico/yellow_card.png" %}" height="20" width="20"
+                src="{% static "img/ico/yellow_card.png" %}"
                 title="Жёлтые карточки"></th>
         <th scope="col" class="text-center"><img
-                src="{% static "img/ico/red_card.png" %}" height="20" width="20"
+                src="{% static "img/ico/red_card.png" %}"
                 title="Красные карточки"></th>
     </tr>
     </thead>
@@ -66,7 +76,7 @@
 
             {% for t,c in team.items %}
                 <td rowspan="{{ c|length }}" class="text">
-                    <img src="{{ t.logo.url }}" alt="{{ t.title }}" width="24" height="24"
+                    <img src="{{ t.logo.url }}" alt="{{ t.title }}"
                          class="mr-1">
                     <a class="team_link font-weight-bolder" href="{{ t.get_absolute_url }}">{{ t.short_title }}</a>
 
