--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -96,7 +96,7 @@
 
     <tr>
         <th colspan="3" class="text-right text">
-            <h4>Всего</h4>
+            <h4 class="mb-0">Всего</h4>
         </th>
         {% for i in overall %}
             <td class="text-center font-weight-bolder number">{{ i }} </td>
