edit players stat

--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -29,10 +29,10 @@
         <th scope="col" class="h5">Команда</th>
         <th scope="col" class="h5">Турнир</th>
         <th scope="col" class="text-center"><img
-                src="{% static "img/ico/statistic/jersey.png" %}"
+                src="{% static "img/ico/statistic/jersey.PNG" %}"
                 title="Вышел на поле"></th>
         <th scope="col" class="text-center"><img
-                src="{% static "img/ico/statistic/ball-alt.png" %}"
+                src="{% static "img/ico/statistic/ball-alt.PNG" %}"
                 title="Забито"></th>
         <th scope="col" class="text-center"><img
                 src="{% static "img/ico/statistic/boots.png" %}"
