edit players stat

--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -35,28 +35,28 @@
                 src="{% static "img/ico/statistic/ball-alt.PNG" %}"
                 title="Забито"></th>
         <th scope="col" class="text-center"><img
-                src="{% static "img/ico/statistic/boots.png" %}"
+                src="{% static "img/ico/statistic/boots.PNG" %}"
                 title="Голевые передачи"></th>
         <th scope="col" class="text-center"><img
-                src="{% static "img/ico/statistic/gloves-alt2.png" %}"
+                src="{% static "img/ico/statistic/gloves-alt2.PNG" %}"
                 title="Сухие таймы"></th>
         <th scope="col" class="text-center">
             <img
-                src="{% static "img/ico/statistic/sub-out.png" %}"
+                src="{% static "img/ico/statistic/sub-out.PNG" %}"
                 title="Ушёл с поля">
         </th>
         <th scope="col" class="text-center">
            <img
-                src="{% static "img/ico/statistic/sub-in.png" %}"
+                src="{% static "img/ico/statistic/sub-in.PNG" %}"
                 title="Вышел на поле">
         </th>
-        <th scope="col"><img src="{% static "img/ico/statistic/dont-do.png" %}"
+        <th scope="col"><img src="{% static "img/ico/statistic/dont-do.PNG" %}"
                              title="Автоголы"></th>
         <th scope="col" class="text-center"><img
-                src="{% static "img/ico/statistic/yellow-card.png" %}"
+                src="{% static "img/ico/statistic/yellow-card.PNG" %}"
                 title="Жёлтые карточки"></th>
         <th scope="col" class="text-center"><img
-                src="{% static "img/ico/statistic/red-card.png" %}"
+                src="{% static "img/ico/statistic/red-card.PNG" %}"
                 title="Красные карточки"></th>
     </tr>
     </thead>
