--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -63,7 +63,7 @@
     <tbody>
     {% for seas,team in stat.items %}
         <tr>
-            <td class="font-weight-bolder h6 text" rowspan="{{ player|rows_player_stat:seas }}">{{ seas }}</td>
+            <td class="h6 text" rowspan="{{ player|rows_player_stat:seas }}" style="font-weight: 900;">{{ seas }}</td>
 
 
             {% for t,c in team.items %}
@@ -88,7 +88,7 @@
 
     <tr>
         <th colspan="3" class="text-right text">
-            <h4 class="mb-0 font-weight-bolder">Всего</h4>
+            <h4 class="mb-0" style="font-weight: 900;">Всего</h4>
         </th>
         {% for i in overall %}
             <td class="text-center font-weight-bolder number">{{ i }} </td>
