edit players stat

--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -25,9 +25,9 @@
 <table class="table table-striped">
     <thead>
     <tr class="text">
-        <th scope="col" class="h6 font-weight-bolder">Сезон</th>
-        <th scope="col" class="h6 font-weight-bolder">Команда</th>
-        <th scope="col" class="h6 font-weight-bolder">Турнир</th>
+        <th scope="col" class="h6" style="font-weight: 900;">Сезон</th>
+        <th scope="col" class="h6" style="font-weight: 900;">Команда</th>
+        <th scope="col" class="h6" style="font-weight: 900;">Турнир</th>
         <th scope="col" class="text-center"><img
                 src="{% static "img/ico/statistic/jersey.PNG" %}"
                 title="Вышел на поле"></th>
