--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -88,7 +88,7 @@
 
     <tr>
         <th colspan="3" class="text-center text">
-            <h4 class="mb-0" style="font-weight: 900;">Всего</h4>
+            <!--<h4 class="mb-0" style="font-weight: 900;">Всего</h4>-->
         </th>
         {% for i in overall %}
             <td class="text-center font-weight-bolder number">{{ i }} </td>
