--- a/haxball_site/templates/tournament/premier_league/team_table.html
+++ b/haxball_site/templates/tournament/premier_league/team_table.html
@@ -1,5 +1,6 @@
 {% extends "core/home.html" %}
 {% load static %}
+{% load cache %}
 {% load tournament_extras %}
 {% block styles %}
     <!-- <link rel="stylesheet" type="text/css" href="{# static "tournament/teams/team_page.css" #}"> -->
@@ -17,6 +18,7 @@
     <script type="text/javascript" src="{% static "core/js/like-dislike.js" %}"></script>
 {% endblock %}
 {% block title %}Чемпионат | {{ league.title }}          cis-haxball.com {% endblock %}
+{% cache 600 champ_table %}
 {% block profile_of_user %}
     <div class="card mb-4 mt-2" style="border-radius: 25px">
         <div class="card-header pb-0" style="border-radius: 25px 25px 0 0">
@@ -280,7 +282,7 @@
         </div>
     </div>
 {% endblock %}
-
+{% endcache %}
 {% block comments %}
     {% include 'core/include/new_comments.html' with object=league comments=comments %}
 {% endblock %}
