edit players stat

--- a/haxball_site/templates/tournament/teams/team_page.html
+++ b/haxball_site/templates/tournament/teams/team_page.html
@@ -1,5 +1,6 @@
 {% extends "core/home.html" %}
 {% load static %}
+{% load cache %}
 {% load tournament_extras %}
 {% block styles %}
     <link rel="stylesheet" type="text/css" href="{% static "tournament/teams/team_page.css" %}">
@@ -19,6 +20,8 @@
     </script>
 {% endblock %}
 {% block title %}Чемпионат | Команда {{ team.title }}         cis-haxball.com {% endblock %}
+
+{% cache 1200 team_detail team %}
 {% block profile_of_user %}
     <div class="container-fluid emp-profile"
          style="background:linear-gradient(to right, {{ team.color_1 }}, {{ team.color_2 }})">
@@ -544,3 +547,4 @@
         </div>
     </div>
 {% endblock %}
+{% endcache %}
